cluster/apps/default/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:3.0.9 # {"$imagepolicy": "flux-system:sonarr"}
        ports:
        - containerPort: 8989
        readinessProbe:
          httpGet:
            path: /settings
            port: 8989
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /settings
            port: 8989
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: /config
          name: config-volume
        - mountPath: /media
          name: media-volume
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: media-volume
        nfs:
          server: sc01.${SECRET_PRIVATE_DOMAIN}
          path: /mnt/dpool/media
