cluster/apps/default/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
    - port: 8989
  selector:
    app.kubernetes.io/name: sonarr
