cluster/apps/default/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  rules:
    - host: sonarr.${SECRET_PUBLIC_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
  tls:
    - hosts:
        - sonarr.${SECRET_PUBLIC_DOMAIN}
